--- a/style.css
+++ b/style.css
@@ -143,6 +143,10 @@ footer {
   border-top: 1px solid #ddd;
 }
 
+.item-card > img {
+  height: 200px;
+}
+
 /* Responsive */
 @media (max-width: 768px) {
   .cta-buttons {
