--- a/Login Page/style.css
+++ b/Login Page/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: #aeddc0;
+  background-color: #fdf8f2;
   height: 100vh;
   /* display: flex;
   justify-content: center;
